compliting header and starting main

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <header class="header">
@@ -67,8 +71,28 @@
               <li class="header-menu-item">
                 <a href="#" class="header-menu-item-link">About</a>
               </li>
-              <li class="header-menu-item">
+              <li class="header-menu-item pages">
                 <a href="#" class="header-menu-item-link">Pages</a>
+                <ul class="sub-menu">
+                  <li class="sub-menu-items">
+                    <a href="#" class="sub-menu-links">Login</a>
+                  </li>
+                  <li class="sub-menu-items">
+                    <a href="#" class="sub-menu-links">Cart</a>
+                  </li>
+                  <li class="sub-menu-items">
+                    <a href="#" class="sub-menu-links">Checkout</a>
+                  </li>
+                  <li class="sub-menu-items">
+                    <a href="#" class="sub-menu-links">Book Details</a>
+                  </li>
+                  <li class="sub-menu-items">
+                    <a href="#" class="sub-menu-links">Blog Details</a>
+                  </li>
+                  <li class="sub-menu-items">
+                    <a href="#" class="sub-menu-links">Element</a>
+                  </li>
+                </ul>
               </li>
               <li class="header-menu-item">
                 <a href="#" class="header-menu-item-link">Blog</a>
@@ -78,12 +102,230 @@
               </li>
             </ul>
           </div>
-          <div class="header-hero"></div>
-          <div class="header-body"></div>
+          <div class="header-hero">
+            <div class="slider-wrapper">
+              <div class="slide-1 slide">
+                <img
+                  src="assests/img/hero/h1-hero1.webp"
+                  alt="hero-img"
+                  class="slide-img-1 slide-img"
+                />
+                <div class="slider-text slider-text-1">
+                  <div class="category-btn">Science Fiction</div>
+                  <h2 class="hero-slider-title">
+                    The History <br />
+                    of Phipino
+                  </h2>
+                  <div class="btn animate__bounceIn">Browse Store</div>
+                </div>
+              </div>
+              <div class="slide-2 slide">
+                <img
+                  src="assests/img/hero/h1-hero2.webp"
+                  alt="hero-img"
+                  class="slide-img-2 slide-img"
+                />
+                <div class="slider-text slider-text-1">
+                  <div class="category-btn">Science Fiction</div>
+                  <h2 class="hero-slider-title">
+                    The History <br />
+                    of Phipino
+                  </h2>
+                  <div class="btn animate__bounceIn">Browse Store</div>
+                </div>
+              </div>
+              <div class="slide-3 slide">
+                <img
+                  src="assests/img/hero/h1-hero3.webp"
+                  alt="hero-img"
+                  class="slide-img-3 slide-img"
+                />
+                <div class="slider-text slider-text-1">
+                  <div class="category-btn">Science Fiction</div>
+                  <h2 class="hero-slider-title">
+                    The History <br />
+                    of Phipino
+                  </h2>
+                  <div class="btn animate__bounceIn">Browse Store</div>
+                </div>
+              </div>
+            </div>
+            <div class="dots">
+              <div class="dot dot1"></div>
+              <div class="dot dot2"></div>
+              <div class="dot dot3"></div>
+            </div>
+          </div>
+          <div class="header-body">
+            <h1 class="hero-main-title">Best Selling Books Ever</h1>
+            <div class="book-slider">
+              <div class="book-slider-wrapper">
+                <i class="fa fa-angle-left"></i>
+                <div class="book-item">
+                  <div class="book-img-wrapper">
+                    <img
+                      src="assests/img/gallery/best-selling1.webp"
+                      alt="book-img"
+                    />
+                  </div>
+                  <div class="book-title">Moon Dance</div>
+                  <div class="book-author">J.R Rain</div>
+                  <div class="book-rating-item-group">
+                    <div class="book-rating-stars">
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star-half-full"></i>
+                    </div>
+                    <div class="book-review">
+                      (<span class="book-review-num">120</span> Review)
+                    </div>
+                    <div class="book-price">$50</div>
+                  </div>
+                </div>
+                <div class="book-item">
+                  <div class="book-img-wrapper">
+                    <img
+                      src="assests/img/gallery/best-selling3.webp"
+                      alt="book-img"
+                    />
+                  </div>
+                  <div class="book-title">Moon Dance</div>
+                  <div class="book-author">J.R Rain</div>
+                  <div class="book-rating-item-group">
+                    <div class="book-rating-stars">
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star-half-full"></i>
+                    </div>
+                    <div class="book-review">
+                      (<span class="book-review-num">120</span> Review)
+                    </div>
+                    <div class="book-price">$50</div>
+                  </div>
+                </div>
+                <div class="book-item">
+                  <div class="book-img-wrapper">
+                    <img
+                      src="assests/img/gallery/best-selling4.webp"
+                      alt="book-img"
+                    />
+                  </div>
+                  <div class="book-title">Moon Dance</div>
+                  <div class="book-author">J.R Rain</div>
+                  <div class="book-rating-item-group">
+                    <div class="book-rating-stars">
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star-half-full"></i>
+                    </div>
+                    <div class="book-review">
+                      (<span class="book-review-num">120</span> Review)
+                    </div>
+                    <div class="book-price">$50</div>
+                  </div>
+                </div>
+                <div class="book-item">
+                  <div class="book-img-wrapper">
+                    <img
+                      src="assests/img/gallery/best-selling7.webp"
+                      alt="book-img"
+                    />
+                  </div>
+                  <div class="book-title">Moon Dance</div>
+                  <div class="book-author">J.R Rain</div>
+                  <div class="book-rating-item-group">
+                    <div class="book-rating-stars">
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star-half-full"></i>
+                    </div>
+                    <div class="book-review">
+                      (<span class="book-review-num">120</span> Review)
+                    </div>
+                    <div class="book-price">$50</div>
+                  </div>
+                </div>
+                <div class="book-item">
+                  <div class="book-img-wrapper">
+                    <img
+                      src="assests/img/gallery/best-selling5.webp"
+                      alt="book-img"
+                    />
+                  </div>
+                  <div class="book-title">Moon Dance</div>
+                  <div class="book-author">J.R Rain</div>
+                  <div class="book-rating-item-group">
+                    <div class="book-rating-stars">
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star-half-full"></i>
+                    </div>
+                    <div class="book-review">
+                      (<span class="book-review-num">120</span> Review)
+                    </div>
+                    <div class="book-price">$50</div>
+                  </div>
+                </div>
+                <div class="book-item">
+                  <div class="book-img-wrapper">
+                    <img
+                      src="assests/img/gallery/best-selling6.webp"
+                      alt="book-img"
+                    />
+                  </div>
+                  <div class="book-title">Moon Dance</div>
+                  <div class="book-author">J.R Rain</div>
+                  <div class="book-rating-item-group">
+                    <div class="book-rating-stars">
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star"></i>
+                      <i class="fa fa-star-half-full"></i>
+                    </div>
+                    <div class="book-review">
+                      (<span class="book-review-num">120</span> Review)
+                    </div>
+                    <div class="book-price">$50</div>
+                  </div>
+                </div>
+                <i class="fa fa-angle-right"></i>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <section class="featured-this-week">
+        <div class="container">
+          <div class="title">
+            <h2>Featured This Week</h2>
+            <a href="#">View All</a>
+          </div>
+          <div class="featured-book-slider">
+            
+          </div>
+          <div class="img-wrapper">
+            <img
+              src="assests/img/gallery/ad.webp"
+              alt="ad"
+              class="featured-img"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer"></footer>
   </body>
 </html>
