--- a/index.html
+++ b/index.html
@@ -313,9 +313,7 @@
             <h2>Featured This Week</h2>
             <a href="#">View All</a>
           </div>
-          <div class="featured-book-slider">
-            
-          </div>
+          <div class="featured-book-slider"></div>
           <div class="img-wrapper">
             <img
               src="assests/img/gallery/ad.webp"
@@ -327,5 +325,6 @@
       </section>
     </main>
     <footer class="footer"></footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
